--- a/pom.xml
+++ b/pom.xml
@@ -104,15 +104,15 @@
                         </publishRegistry>
                     </docker>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>docker-exec</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>build-image</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!--<executions>-->
+                <!--    <execution>-->
+                <!--        <id>docker-exec</id>-->
+                <!--        <phase>install</phase>-->
+                <!--        <goals>-->
+                <!--            <goal>build-image</goal>-->
+                <!--        </goals>-->
+                <!--    </execution>-->
+                <!--</executions>-->
             </plugin>
         </plugins>
     </build>
